--- a/stable/css/themes/default.css
+++ b/stable/css/themes/default.css
@@ -19,6 +19,7 @@
     --dark-gray-30: #42414d;
     --dark-gray-40: #3a3944;
     --dark-gray-50: #32313c;
+    --dark-gray-60: #27262f; /* LOCAL CHANGES */
     --dark-gray-70: #23222b;
     --dark-gray-80: #1c1b22;
     --dark-gray-90: #15141a;
@@ -32,6 +33,7 @@
     --light-gray-10-a4: #f9f9fb0a;
     --light-gray-10-a12: #f9f9fb1f;
     --light-gray-10-a16: #f9f9fb29;
+    --light-gray-10-a18: #f9f9fb33; /* LOCAL CHANGES */
     --light-gray-20: #f0f0f4;
     --light-gray-25: #e8e8ed;
     --light-gray-30: #e0e0e6;
@@ -248,9 +250,9 @@
     --default-ink: var(--light-gray-10);
     --default-ink-a4: var(--light-gray-10-a4);
     --default-ink-a50: var(--light-gray-30-a50);
-    --default-surface: var(--dark-gray-90);
+    --default-surface: var(--dark-gray-60); /* LOCAL CHANGES */
     --default-surface-hover: var(--dark-gray-50);
-    --bg-1: hsla(250, 13%, 9%, 1);
+    --bg-1: hsla(250, 13%, 17%, 1); /* LOCAL CHANGES */
     --bg-1-border: hsla(250, 13%, 16%, 1);
     --bg-overlay-50: #0008;
     --bg-code: hsla(0, 2%, 0%, 0.8);
@@ -261,15 +263,15 @@
     --fg-0-40: hsla(0, 0%, 53%, 0.4);
     --fg-0-30: hsla(0, 0%, 53%, 0.3);
     --fg-0-20: hsla(0, 0%, 53%, 0.2);
-    --link-ink: #bb86fc;
+    --link-ink: #32a2e4; /* LOCAL CHANGES */
     --fieldset-header-surface: transparent;
     --fieldset-header-ink: var(--light-gray-30);
     --hr-ink: var(--dark-gray-50);
-    --button-surface: var(--light-gray-10-a12);
+    --button-surface: var(--light-gray-10-a18); /* LOCAL CHANGES */
     --button-ink: var(--default-ink);
     --button-surface-hover: var(--light-gray-10-a12);
     --button-active-surface: var(--light-gray-70);
-    --button-important-surface: var(--dark-gray-30);
+    --button-important-surface: var(--dark-gray-40); /* LOCAL CHANGES */
     --button-important-surface-hover: var(--light-gray-60);
     --button-disabled-filter: opacity(38%);
     --button-disabled-surface: var(--dark-gray-50);
@@ -278,11 +280,11 @@
     --button-preferred-ink: var(--light-gray-70);
     --checkbox-size: calc(var(--font-size) + 2px);
     --checkbox-ink: var(--default-ink);
-    --checkbox-checked-ink: #bb86fc;
+    --checkbox-checked-ink: #cfd4d6; /* LOCAL CHANGES */
   /*--select-surface:*/
     --bg-transient-notice: var(--dark-gray-50);
     --dashboard-bar-shadow: 0px 0px 0px 1px var(--default-ink-a4);
-    --dashboard-tab-active-ink: #bb86fc;
+    --dashboard-tab-active-ink: #00adff; /* LOCAL CHANGES */
     --dashboard-tab-surface-hover: var(--default-surface-hover);
     --fg-icon-info-lvl-0-dimmed: #888;
     --fg-icon-info-lvl-0: inherit;
